Added Database support

--- a/tickets/src/main/resources/application-testdata.properties
+++ b/tickets/src/main/resources/application-testdata.properties
@@ -5,4 +5,4 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
-spring.sql.init.mode=never
+spring.sql.init.mode=always
